exports[`server side render can have two components in the same render tree 1`] = `
Object {
  "isCompleted": false,
  "isError": false,
  "isLoaded": false,
  "isLoading": true,
  "renderCount": 3,
}
`;

exports[`server side render can have two components in the same render tree 2`] = `
Object {
  "isCompleted": false,
  "isError": false,
  "isLoaded": false,
  "isLoading": true,
  "renderCount": 4,
}
`;

exports[`server side render can have two components in the same render tree 3`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": false,
          "dataFromServerSideRender": true,
          "failed": false,
          "loading": true,
        },
      },
    },
    "loadingCount": 1,
  },
}
`;

exports[`server side render does not render on the server if clientLoadOnlySet 1`] = `
Object {
  "dataLoader": Object {
    "data": Object {},
    "loadingCount": 0,
  },
}
`;

exports[`server side render multiple data loaders with same key should not load data multiple times 1`] = `
Object {
  "isCompleted": false,
  "isError": false,
  "isLoaded": false,
  "isLoading": true,
  "renderCount": 2,
}
`;

exports[`server side render multiple data loaders with same key should not load data multiple times 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": false,
          "dataFromServerSideRender": true,
          "failed": false,
          "loading": true,
        },
      },
    },
    "loadingCount": 1,
  },
}
`;

exports[`server side render second SSR with two components in same tree uses data 1`] = `
Object {
  "data": Object {
    "result": "Success!",
  },
  "isCompleted": true,
  "isError": false,
  "isLoaded": true,
  "isLoading": false,
  "renderCount": 1,
}
`;

exports[`server side render second SSR with two components in same tree uses data 2`] = `
Object {
  "data": Object {
    "result": "Success!",
  },
  "isCompleted": true,
  "isError": false,
  "isLoaded": true,
  "isLoading": false,
  "renderCount": 2,
}
`;

exports[`server side render second SSR with two components in same tree uses data 3`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": true,
          "data": Object {
            "result": "Success!",
          },
          "dataFromServerSideRender": true,
          "failed": false,
          "loading": false,
        },
      },
    },
    "loadingCount": 0,
  },
}
`;

exports[`server side render should pass failure when data load fails 1`] = `
Object {
  "errorMessage": "Boom!",
  "isCompleted": true,
  "isError": true,
  "isLoaded": false,
  "isLoading": false,
  "renderCount": 3,
}
`;

exports[`server side render should pass failure when data load fails 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": true,
          "dataFromServerSideRender": true,
          "error": "Boom!",
          "failed": true,
          "loading": false,
        },
      },
    },
    "loadingCount": 0,
  },
}
`;

exports[`server side render should pass loaded data once promise resolves 1`] = `
Object {
  "data": Object {
    "result": "Success!",
  },
  "isCompleted": true,
  "isError": false,
  "isLoaded": true,
  "isLoading": false,
  "renderCount": 3,
}
`;

exports[`server side render should pass loaded data once promise resolves 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": true,
          "data": Object {
            "result": "Success!",
          },
          "dataFromServerSideRender": true,
          "failed": false,
          "loading": false,
        },
      },
    },
    "loadingCount": 0,
  },
}
`;

exports[`server side render should start loading data if not loaded 1`] = `
Object {
  "isCompleted": false,
  "isError": false,
  "isLoaded": false,
  "isLoading": true,
  "renderCount": 2,
}
`;

exports[`server side render should start loading data if not loaded 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "completed": false,
          "dataFromServerSideRender": true,
          "failed": false,
          "loading": true,
        },
      },
    },
    "loadingCount": 1,
  },
}
`;
